tests/rosetta/transpiler/Kotlin/aliquot-sequence-classifications.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/aliquot-sequence-classifications.kt:32:25: error: type mismatch: inferred type is Int but BigInteger was expected
    var y: BigInteger = (x + 1) / 2
                        ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/aliquot-sequence-classifications.kt:150:20: error: the integer literal does not conform to the expected type Int
    val big: Int = 15355717786080
                   ^
